# MyTuyaOpen

./: .gitignore
apps/tuya.ai/your_chat_bot/include/: tuya_config.h
apps/tuya.ai/your_life_companion/: .gitignore  CMakeLists.txt  Kconfig  README.md  README_zh.md
apps/tuya.ai/your_life_companion/config/: T5AI_MINI.config
apps/tuya.ai/your_life_companion/include/: app_alarm.h  app_chat_bot.h  app_clock.h  app_expiry.h  app_gesture.h  app_medicine.h  app_servo.h  app_todo.h  app_ui.h  app_weather.h  tuya_config.h  wifi_config.h.example
apps/tuya.ai/your_life_companion/script/: emoji_generator_complete.py  png_to_c_array.py
apps/tuya.ai/your_life_companion/src/: app_alarm.c  app_chat_bot.c  app_clock.c  app_expiry.c  app_gesture.c  app_medicine.c  app_servo.c  app_todo.c  app_weather.c  tuya_main.c
apps/tuya.ai/your_life_companion/src/ui/image/emmo/: anger.c  blink.c  center.c  happy.c  heart_eyes.c  left.c  rainbow.c  right.c  rolling.c  sad.c  sleep.c  surprise.c  wakeup.c  wink.c  zigzag.c
apps/tuya.ai/your_life_companion/src/ui/image/weather/: cloudy_129.c  rain_112.c  small_rain_139.c  snow_105.c  sun_120.c  thunder_110.c  thundershower_143.c  windy_114.c
apps/tuya.ai/your_life_companion/src/ui/src/: app_ui_main.c  ui_clock.c  ui_emoji.c
apps/tuya_cloud/switch_demo/src/: cli_cmd.c
boards/ESP32/config/: ESP32.config
platform/: platform_config.yaml
src/tal_system/include/: tal_event_info.h
src/tuya_cloud_service/cloud/: tuya_device_meta.c  tuya_device_timer.c  tuya_iot.c
src/tuya_cloud_service/tls/: tuya_tls.c
